# 2FA-yubikey

./: readme.md  report.md
client/: Cargo.toml
client/src/: action.rs  authentication.rs  connection.rs  constante.rs  main.rs  yubi.rs
server/: Cargo.toml  db.ron
server/src/: action.rs  authentication.rs  connection.rs  constante.rs  database.rs  mailer.rs  main.rs
