[package]
name = "client"
version = "0.1.0"
authors = ["SEC"]
edition = "2021"

[dependencies]
read_input = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
strum = "0.20"
strum_macros = "0.20"
yubikey = { version = "0.5", features = ["untested"]}
x509 = "0.2.0"
hmac  = "0.12.1"
argon2 = "0.3"
password-hash = "0.4.0"
sha2 = "0.10.2"
base64 ="0.13.0"


