[package]
name = "server"
version = "0.1.0"
authors = ["SEC"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rustbreak = { version = "2", features = ["ron_enc"] }
lazy_static = "1.4"
bincode = "1.3"
rand_core = { version = "0.6.3", features = ["std"] }
argon2 = "0.3"
password-hash = "0.4.0"
lettre = {version = "0.9.6", features = ["smtp-transport"]}
lettre_email = "0.9.2"
sodiumoxide = "0.2.7"
base64 ="0.13.0"
hmac  = "0.12.1"
sha2 = "0.10.2"
p256 = "0.11.0"
validator = "0.15.0"
